external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/positional_struct_autocomplete.ide.exp
note[I15001]: IDE autocomplete
  ┌─ tests/move_2024/ide_mode/positional_struct_autocomplete.move:9:23
  │
9 │         let _tmp1 = _s.;
  │                       ^ Autocompletes to: '0'

error[E01002]: unexpected token
  ┌─ tests/move_2024/ide_mode/positional_struct_autocomplete.move:9:24
  │
9 │         let _tmp1 = _s.;
  │                        ^
  │                        │
  │                        Unexpected ';'
  │                        Expected an identifier or a decimal number

note[I15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/positional_struct_autocomplete.move:10:24
   │
10 │         let _tmp2 = _s.0.;
   │                        ^ Autocompletes to: '0'

note[I15001]: IDE autocomplete
   ┌─ tests/move_2024/ide_mode/positional_struct_autocomplete.move:10:25
   │
10 │         let _tmp2 = _s.0.;
   │                         ^ Autocompletes to: '0'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/positional_struct_autocomplete.move:10:26
   │
10 │         let _tmp2 = _s.0.;
   │                          ^
   │                          │
   │                          Unexpected ';'
   │                          Expected an identifier or a decimal number

